# spraygun_trigger

./: CMakeLists.txt  package.xml
src/: trigger_control.cpp
srv/: partial_squeeze.srv  timed_squeeze.srv
